kubernetes/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          imagePullPolicy: Always
          stdin: true
          image: strahinja16/sir-client:1.0.8
          ports:
            - containerPort: 3004
