kubernetes/execution-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: executiondb
  labels:
    app: executiondb
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: executiondb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: executiondb
  labels:
    app: executiondb
spec:
  selector:
    matchLabels:
      app: executiondb
  replicas: 1
  template:
    metadata:
      labels:
        app: executiondb
    spec:
      containers:
        - name: executiondb
          image: postgres
          ports:
            - containerPort: 5432
