kubernetes/personnel-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: personneldb
  labels:
    app: personneldb
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: personneldb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personneldb
  labels:
    app: personneldb
spec:
  selector:
    matchLabels:
      app: personneldb
  replicas: 1
  template:
    metadata:
      labels:
        app: personneldb
    spec:
      containers:
        - name: personneldb
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: personnel-volume
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: personnel-volume
          persistentVolumeClaim:
            claimName: personnel-pv
