kubernetes/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /$1 break;
      rewrite ^/services/api-gateway/(.*)$ /$1 break;
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 80
          - path: /services/api-gateway
            backend:
              serviceName: api-gateway
              servicePort: 3000
